<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.acme</groupId>
    <artifactId>quarkus-langchain4j-rag</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <properties>
        <compiler-plugin.version>3.11.0</compiler-plugin.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
        <quarkus.platform.version>3.9.2</quarkus.platform.version>
        <skipITs>true</skipITs>
        <surefire-plugin.version>3.1.2</surefire-plugin.version>
        <quarkus-langchain4j.version>999-SNAPSHOT</quarkus-langchain4j.version>
        <!-- FIXME: import from the bom when it's available -->
        <langchain4j.version>0.27.1</langchain4j.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-arc</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-websockets-next</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-resteasy-reactive</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-resteasy-reactive-qute</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-junit5</artifactId>
            <scope>test</scope>
        </dependency>


        <!-- EMBEDDING MODEL -->
<!--        <dependency>-->
<!--            <groupId>dev.langchain4j</groupId>-->
<!--            <artifactId>langchain4j-embeddings-all-minilm-l6-v2-q</artifactId>-->
<!--            <version>${langchain4j.version}</version>-->
<!--        </dependency>-->
<!---->
        <dependency>
            <groupId>io.quarkiverse.langchain4j</groupId>
            <artifactId>quarkus-langchain4j-openai</artifactId>
            <version>${quarkus-langchain4j.version}</version>
        </dependency>
<!--                <dependency>-->
<!--                    <groupId>io.quarkiverse.langchain4j</groupId>-->
<!--                    <artifactId>quarkus-langchain4j-mistral-ai</artifactId>-->
<!--                    <version>${quarkus-langchain4j.version}</version>-->
<!--                </dependency>-->

        <!-- Choose one of the dependencies (embedding stores) below -->

        <!--    <dependency>-->
        <!--      <groupId>io.quarkiverse.langchain4j</groupId>-->
        <!--      <artifactId>quarkus-langchain4j-chroma</artifactId>-->
        <!--      <version>${quarkus-langchain4j.version}</version>-->
        <!--    </dependency>-->
        <dependency>
            <groupId>io.quarkiverse.langchain4j</groupId>
            <artifactId>quarkus-langchain4j-redis</artifactId>
            <version>${quarkus-langchain4j.version}</version>
        </dependency>
<!--            <dependency>-->
<!--              <groupId>io.quarkiverse.langchain4j</groupId>-->
<!--              <artifactId>quarkus-langchain4j-pgvector</artifactId>-->
<!--              <version>${quarkus-langchain4j.version}</version>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--              <groupId>io.quarkiverse.langchain4j</groupId>-->
<!--              <artifactId>quarkus-langchain4j-pinecone</artifactId>-->
<!--              <version>${quarkus-langchain4j.version}</version>-->
<!--            </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.quarkiverse.langchain4j</groupId>-->
<!--            <artifactId>quarkus-langchain4j-milvus</artifactId>-->
<!--            <version>${quarkus-langchain4j.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.quarkiverse.langchain4j</groupId>-->
<!--            <artifactId>quarkus-langchain4j-infinispan</artifactId>-->
<!--            <version>${quarkus-langchain4j.version}</version>-->
<!--        </dependency>-->
        <!-- Needed if using infinispan:
         This is temporary until Quarkus upgrades to a final version of Infinispan 15 -->
<!--        <dependency>-->
<!--            <groupId>org.infinispan</groupId>-->
<!--            <artifactId>infinispan-commons</artifactId>-->
<!--            <version>15.0.0.Dev08</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.infinispan</groupId>-->
<!--            <artifactId>infinispan-api</artifactId>-->
<!--            <version>15.0.0.Dev08</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.infinispan</groupId>-->
<!--            <artifactId>infinispan-query-dsl</artifactId>-->
<!--            <version>15.0.0.Dev08</version>-->
<!--        </dependency>-->

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>quarkus-maven-plugin</artifactId>
                <version>${quarkus.platform.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <goals>
                            <goal>build</goal>
                            <goal>generate-code</goal>
                            <goal>generate-code-tests</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                        <configuration>
                            <systemPropertyVariables>
                                <native.image.path>${project.build.directory}/${project.build.finalName}-runner
                                </native.image.path>
                                <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                                <maven.home>${maven.home}</maven.home>
                            </systemPropertyVariables>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <properties>
                <skipITs>false</skipITs>
                <quarkus.package.type>native</quarkus.package.type>
            </properties>
        </profile>
    </profiles>
</project>
